Fixed the vertical alignment issue in a single image post

--- a/web/css/buzzNew.css
+++ b/web/css/buzzNew.css
@@ -56,7 +56,6 @@ input[type="file"] {
 .buzzRightBar{
     width: 300px;
     float: right;
-    position: fixed;
     right: 12%;
     max-width: 300px;
     margin-top: 50px;
