--- a/web/css/photoTiling.css
+++ b/web/css/photoTiling.css
@@ -8,7 +8,13 @@
     line-height: 250px;
 }
 .oneImageOne img{
-    vertical-align: middle;
+    display:block;
+    position:absolute;
+    left:0;
+    right:0;
+    bottom:10px;
+    margin:auto;
+    top:0;
 }
 
 .twoImageOne{
